# rncp_project

./: README.md  app.py  pyproject.toml
API/: app.py  watches_website_api.csv
SQL/: Queries_watches_website.sql  cleaned_file_utf8.csv  watches.mwb  watches_websiteVFF.sql  webscrap_bucherer_second_hand.csv
data/: VC_datas
for_tableau/: Final_project Presentation.twbx  country_condition_brand.csv  country_watch.csv  country_watch_count.csv  summary_df.csv  summary_df_men_cat.csv  summary_df_men_product_type.csv  top_10_brands_df.csv  top_brands_per_country_full.csv
notebook/: LAST_VERSION_Web_scraping_Bucherer.ipynb  RNCP_Vestiaire Co - Initial analysis.ipynb
src/second_hand_luxury_project/: __init__.py
